--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       </button>
     </div>
 
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.socket.io/4.0.1/socket.io.min.js"></script>
     <script>
       const socket = io();
 
